<resources>
    <string name="app_name">Argusyes</string>
    <string name="nav_title_server">Server</string>
    <string name="nav_title_status">Status</string>
    <string name="nav_title_setting">Setting</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="add_server">Add Server</string>
    <string name="show_name">显示名称</string>
    <string name="name">名称</string>
    <string name="port">端口</string>
    <string name="host">主机</string>
    <string name="ip">IP</string>
    <string name="default_port">22</string>
    <string name="username">username</string>
    <string name="user">用户</string>
    <string name="password">密码</string>
    <string name="root">root</string>
    <string name="identify">identify</string>
    <string name="about">About</string>
    <string name="back">返回</string>
    <string name="about_github">https://github.com/Argusyes/argusyes-android</string>
    <string name="zero">0</string>
    <string name="temp_unit">℃</string>
    <string name="mem_unit">M</string>
    <string name="connect_fail">连接失败</string>
    <string name="load">LOAD</string>
    <string name="cpu">CPU</string>
    <string name="percent_sign">%</string>
    <string name="mem">MEM</string>
    <string name="swap">SWAP</string>
    <string name="up_second">↑/s</string>
    <string name="down_second">↓/s</string>
    <string name="upload">upload</string>
    <string name="download">download</string>
    <string name="read_second">read/s</string>
    <string name="write_second">write/s</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="system">系统</string>
    <string name="io_wait">IO等待</string>
    <string name="nice">NICE</string>
    <string name="core_num">核数</string>
    <string name="free">空闲</string>
    <string name="run_time">运行事件</string>
    <string name="d">D</string>
    <string name="_1_5_15m">1,5,15m</string>
    <string name="available">可用</string>
    <string name="used">已用</string>
    <string name="page_cache">页面缓存</string>
    <string name="loadavg">负载</string>
    <string name="k_s">k/s</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="re_trans_rate">重传率</string>
    <string name="active_opens">主动建连</string>
    <string name="passive_opens">被动建连</string>
    <string name="fail_opens">建连失败</string>
    <string name="mount">mount</string>
    <string name="filesystem">FileSystem</string>
    <string name="speed">速率</string>
    <string name="bytes">字节</string>
    <string name="split">/</string>
    <string name="iops">IOPS</string>
    <string name="delay">延迟</string>
</resources>