<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corners_bg_white"
    android:orientation="vertical"
    android:padding="10sp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/disk_mount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mount"
                android:theme="@style/mySmallText"/>
            <TextView
                android:id="@+id/disk_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:theme="@style/mySmallTextSecondary"/>


        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/disk_file_system_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filesystem"
                android:gravity="end"
                android:layout_gravity="end"
                android:theme="@style/mySmallTextSecondary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="0sp"
                android:layout_gravity="end" >

                <TextView
                    android:id="@+id/disk_used_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:id="@+id/disk_used_unit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/mem_unit"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/split"
                    android:theme="@style/mySmallTextSecondary" />

                <TextView
                    android:id="@+id/disk_total_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:theme="@style/mySmallTextSecondary" />

                <TextView
                    android:id="@+id/disk_total_unit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/mem_unit"
                    android:theme="@style/mySmallTextSecondary" />

            </LinearLayout>

        </LinearLayout>

        <com.android.argusyes.ui.RectangleProgress
            android:id="@+id/disk_bar"
            android:layout_marginStart="5sp"
            android:layout_width="25sp"
            android:layout_height="40sp"
            app:myRPFrontendColor="?highlightGreen"
            app:myRPBackgroundColor="?myBackColor"
            app:myRPProgress="0"
            app:myRPMax="100" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginVertical="10sp"
        android:background="?myHintColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/mySmallTextSecondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read"
                android:theme="@style/mySmallTextSecondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write"
                android:theme="@style/mySmallTextSecondary"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical|end" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/speed"
                android:theme="@style/mySmallTextSecondary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0sp"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/disk_read_speed_text_view"
                    android:layout_width="36sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:gravity="end"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:id="@+id/disk_read_speed_unit_text_view"
                    android:layout_width="25sp"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/k_s"
                    android:theme="@style/mySmallTextSecondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0sp"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/disk_write_speed_text_view"
                    android:layout_width="36sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:gravity="end"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:id="@+id/disk_write_speed_unit_text_view"
                    android:layout_width="25sp"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/k_s"
                    android:theme="@style/mySmallTextSecondary" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical|end" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bytes"
                android:layout_gravity="center_vertical|end"
                android:theme="@style/mySmallTextSecondary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0sp"
                android:layout_gravity="center_vertical|end" >

                <TextView
                    android:id="@+id/disk_read_text_view"
                    android:layout_width="36sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:gravity="end"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:id="@+id/disk_read_unit_text_view"
                    android:layout_width="12sp"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/mem_unit"
                    android:theme="@style/mySmallTextSecondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0sp"
                android:layout_gravity="center_vertical|end" >

                <TextView
                    android:id="@+id/disk_write_text_view"
                    android:layout_width="36sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2sp"
                    android:background="@color/trans"
                    android:text="@string/zero"
                    android:gravity="end"
                    android:theme="@style/mySmallText" />

                <TextView
                    android:id="@+id/disk_write_unit_text_view"
                    android:layout_width="12sp"
                    android:layout_height="wrap_content"
                    android:background="@color/trans"
                    android:text="@string/mem_unit"
                    android:theme="@style/mySmallTextSecondary" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical|end" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iops"
                android:theme="@style/mySmallTextSecondary"/>

            <TextView
                android:id="@+id/disk_read_iops_text_view"
                android:layout_width="36sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:background="@color/trans"
                android:text="@string/zero"
                android:gravity="end"
                android:theme="@style/mySmallText" />

            <TextView
                android:id="@+id/disk_write_iops_text_view"
                android:layout_width="36sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:background="@color/trans"
                android:text="@string/zero"
                android:gravity="end"
                android:theme="@style/mySmallText" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0sp"
            android:gravity="center_vertical|end" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay"
                android:theme="@style/mySmallTextSecondary"/>

            <TextView
                android:id="@+id/disk_read_delay_text_view"
                android:layout_width="36sp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:background="@color/trans"
                android:text="@string/zero"
                android:theme="@style/mySmallText" />

            <TextView
                android:id="@+id/disk_write_delay_text_view"
                android:layout_width="36sp"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:background="@color/trans"
                android:text="@string/zero"
                android:theme="@style/mySmallText" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>