<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/myFragment"
    tools:context=".fragment.SettingMainFragment">

    <LinearLayout
        android:id="@+id/setting_about_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/noPaddingLayout">

        <TextView
            android:id="@+id/setting_about_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/about"
            android:theme="@style/myFragmentTitleText"/>

        <Button
            android:id="@+id/setting_about_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:background="@color/trans"
            android:text="@string/back"
            android:theme="@style/myPrimaryText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/noPaddingLayout"
        android:layout_marginTop="10sp"
        android:background="@drawable/corners_bg_white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@color/trans"
            android:theme="@style/mySearchLayout">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:background="@color/trans"
                android:src="@drawable/ic_github"
                app:tint="?myTextColor"/>

            <TextView
                android:id="@+id/setting_about_github_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_github"
                android:layout_gravity="center"
                android:gravity="center_horizontal|end"
                android:padding="5sp"
                android:autoLink="web"
                android:background="@color/trans"
                android:theme="@style/myLinkText" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>